feat: index chain-wide Iris markets
